2010-08-25  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/term/ieee1275/ofconsole.c (put): Correct prototype.
	(readkey): Likewise.

2010-08-25  BVK Chaitanya  <bvk.groups@gmail.com>

	Multiple variable names support to "export" command.

	* normal/context.c (grub_cmd_export): "export" command supports
	multiple variable names.

2010-08-23  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* util/grub.d/30_os-prober.in: Fix conversion from grub-probe
	--target=drive output to Mach device name.

2010-08-23  BVK Chaitanya  <bvk.groups@gmail.com>

	New Automake based build system for GRUB.

	* ABOUT-NLS: New file.
	* Makefile.am: New file. GRUB host utils' rules that doesn't fit
	in Makefile.util.def file.
	* Makefile.util.def: New file.  Autogen build definitions file for
	GRUB host utils.
	* conf/Makefile.common: New file.  Common variables for GRUB host
	utils and target modules.
	* conf/Makefile.extra-dist: New file.  Extra files for make dist.
	* docs/Makefile.am: New file.  Automake file for docs.
	* gentpl.py: New file.  Python script to generate Autogen
	template.
	* grub-core/Makefile.am: New file.  GRUB target modules' rules
	that doesn't fit in Makefile.core.def file.
	* grub-core/Makefile.core.def: New file.  Autogen build
	definitions file for GRUB target modules.
	* grub-core/lib/setjmp.S: New file.  Wrapper for target_cpu
	specific setjmp.S file.
	* po/Makefile.am: New file.

	* .bzrignore: New ignores.
	* INSTALL: New requirements, without Ruby.
	* acinclude.m4: Use TARGET_IMG_BASE_LDOPT variable instead.
	* autogen.sh: Updated to invoke autogen as necessary.
	* configure.ac: Separate *FLAGS with HOST_ and TARGET_ prefixes,
	and defines for Automake conditionals.
	* geninit.sh: Refactoring.

	* include/grub/dl.h: Allow build rules to define GRUB_MOD_* if
	necessary.
	* include/grub/emu/getroot.h (grub_make_system_path_relative_to_its_root):
	New prototype.

	* include/grub/test.h: Fix functional test modules' naming.