@@ -107,7 +107,7 @@ grub_biosdisk_open (const char *name, grub_disk_t disk)
   if (drive < 0)
     return grub_errno;
 
-  disk->has_partitions = ((drive & 0x80) && (drive != cd_drive));
+  disk->has_partitions = 1;
   disk->id = drive;
 
   data = (struct grub_biosdisk_data *) grub_zalloc (sizeof (*data));
@@ -123,7 +123,7 @@ grub_biosdisk_open (const char *name, grub_disk_t disk)
       /* TODO: get the correct size.  */
       total_sectors = GRUB_DISK_SIZE_UNKNOWN;
     }
-  else if (drive & 0x80)
+  else
     {
       /* HDD */
       int version;
